compiler/testData/cli/jvm/codeanalysisStrict.out
compiler/testData/cli/jvm/jspecifyUsage.kt:2:11: error: null can not be a value of a non-null type String
    a.foo(null)
          ^
COMPILATION_ERROR
